--- a/index.html
+++ b/index.html
@@ -211,6 +211,30 @@ Created by [40623147廖彥霖](blog/index.html)
         </script>
     </section>
 </section>
+<section>
+    <section data-markdown>
+        <script type="text/template">
+    #W10-W12
+
+    * 創建Github帳號
+    * 學會自行調整start.bat及stop.bat
+    * 
+    * 
+        </script>
+    </section>
+</section>
+<section>
+    <section data-markdown>
+        <script type="text/template">
+    #W13-W15
+
+    * Github期末協同倉儲
+    * 
+    * 
+    * 
+        </script>
+    </section>
+</section>
 <section data-markdown>
     <script type="text/template">
 # 隨身碟內容介紹
