--- a/index.html
+++ b/index.html
@@ -218,13 +218,27 @@ Created by [40623147廖彥霖](blog/index.html)
 
     * 創建Github帳號
     * 學會自行調整start.bat及stop.bat
-    * 
+    * 用Eric6把計算機所需按鍵的配置好
     * 
         </script>
     </section>
     <section data-markdown>
         <script type="text/template">
+    #創建Github帳號
+
     <img src="https://raw.githubusercontent.com/40623147/w15/gh-pages/%E5%9C%96%E7%89%87/1.png" width="500" height="500"></a>
+        </script>
+    </section>
+    <section data-markdown>
+        <script type="text/template">
+    #學會自行調整start.bat及stop.bat
+
+    <img src="https://raw.githubusercontent.com/40623147/w15/gh-pages/%E5%9C%96%E7%89%87/2.png" width="500" height="500"></a>
+        </script>
+    </section>
+    <section data-markdown>
+        <script type="text/template">
+     #設定pressButton 與 lineEdit 物件的尺寸大小, 把物件命名, 瞭解設定 clicked 與 connect 
         </script>
     </section>
 </section>
