--- a/index.html
+++ b/index.html
@@ -224,21 +224,21 @@ Created by [40623147廖彥霖](blog/index.html)
     </section>
     <section data-markdown>
         <script type="text/template">
-    #創建Github帳號
+    * 創建Github帳號
 
     <img src="https://raw.githubusercontent.com/40623147/w15/gh-pages/%E5%9C%96%E7%89%87/1.png" width="500" height="500"></a>
         </script>
     </section>
     <section data-markdown>
         <script type="text/template">
-    #學會自行調整start.bat及stop.bat
+    * 學會自行調整start.bat及stop.bat
 
     <img src="https://raw.githubusercontent.com/40623147/w15/gh-pages/%E5%9C%96%E7%89%87/2.png" width="500" height="500"></a>
         </script>
     </section>
     <section data-markdown>
         <script type="text/template">
-     #設定pressButton 與 lineEdit 物件的尺寸大小, 把物件命名, 瞭解設定 clicked 與 connect 
+     * 設定pressButton 與 lineEdit 物件的尺寸大小, 把物件命名, 瞭解設定 clicked 與 connect 
         </script>
     </section>
 </section>
