--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ Created by [40623147廖彥霖](blog/index.html)
 
     * 創建Github帳號
 
-    <img src="https://raw.githubusercontent.com/40623147/w15/gh-pages/%E5%9C%96%E7%89%87/1.png" width="500" height="500"></a>
+    <a href="https://raw.githubusercontent.com/40623147/w15/gh-pages/%E5%9C%96%E7%89%87/1.png"><img src="https://raw.githubusercontent.com/40623147/w15/gh-pages/%E5%9C%96%E7%89%87/1.png" width="500" height="500"></a>
         </script>
     </section>
     <section data-markdown>
@@ -235,7 +235,7 @@ Created by [40623147廖彥霖](blog/index.html)
 
     * 學會自行調整start.bat及stop.bat
 
-    <img src="https://raw.githubusercontent.com/40623147/w15/gh-pages/%E5%9C%96%E7%89%87/2.png" width="500" height="500"></a>
+    <a href="https://raw.githubusercontent.com/40623147/w15/gh-pages/%E5%9C%96%E7%89%87/2.png"><img src="https://raw.githubusercontent.com/40623147/w15/gh-pages/%E5%9C%96%E7%89%87/2.png" width="500" height="500"></a>
         </script>
     </section>
     <section data-markdown>
