--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ Created by [40623147廖彥霖](blog/index.html)
     * 創建Github帳號
     * 學會自行調整start.bat及stop.bat
     * 用Eric6把計算機所需按鍵的配置好
-    * 
+    * 使用DiaPortable與GIMPPortable
         </script>
     </section>
     <section data-markdown>
@@ -241,18 +241,58 @@ Created by [40623147廖彥霖](blog/index.html)
     * 設定pressButton 與 lineEdit 物件的尺寸大小, 把物件命名, 瞭解設定 clicked 與 connect 
         </script>
     </section>
-</section>
-<section>
     <section data-markdown>
         <script type="text/template">
+    #使用DiaPortable與GIMPPortable
+
+    * 使用DiaPortable 做流程圖及箭頭極佳
+    * 使用GIMPPortable剪裁圖片
+        </script>
+    </section>
+</section>
+<section data-markdown>
+    <script type="text/template">
+<section>
     #W13-W15
 
     * Github期末協同倉儲
-    * 
-    * 
-    * 
-        </script>
-    </section>
+    * 學習github指令
+    * 製作計算機
+</section>
+<section data-markdown>
+    <script type="text/template">
+*  Github期末協同倉儲
+
+<img src="https://github.com/40623147/w15/blob/gh-pages/%E5%9C%96%E7%89%87/%E5%9C%98%E9%9A%8A.jpg" width="500" height="500"></a>
+    </script>
+</section>
+<section data-markdown>
+    <script type="text/template">
+#常用github指令
+* git add . 要新增所有改版的內容
+* git commit -m "改版訊息" 改版檔名
+* git push 將近端改版資料推送到遠端
+    </script>
+</section>
+<section data-markdown>
+    <script type="text/template">
+#與組員協同製作計算機
+* 使用github組員分工製作出計算機基本功能並排除錯誤
+    </script>
+</section>
+<section data-markdown>
+    <script type="text/template">
+#心得
+一開始我連怎麼打指令都不知道，甚麼都不懂得我只好一直問同學，來找TA學習怎麼製作計算機，我做的地方是減號,這個需要跟加號的地方作一個判斷，不然只會跑出加號的功能，一直重疊到我也花了很久才找到怎麼用，我找別組的同學問才知道怎麼搞。
+    </script>
+</section>
+<section data-markdown>
+    <script type="text/template">
+##自評成績
+#73
+    </script>
+</section>
+    </script>
 </section>
 <section data-markdown>
     <script type="text/template">
