--- a/index.html
+++ b/index.html
@@ -262,9 +262,9 @@ Created by [40623147廖彥霖](blog/index.html)
     </section>
     <section data-markdown>
         <script type="text/template">
-    *  Github期末協同倉儲
-
-    <img src="https://github.com/40623147/w15/blob/gh-pages/%E5%9C%96%E7%89%87/%E5%9C%98%E9%9A%8A.jpg" width="500" height="500"></a>
+    # Github期末協同倉儲
+    * git config --user.email及username
+    * 加入協同者
         </script>
     </section>
     <section data-markdown>
